automovel crud (em andamento)

--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarAutomovel.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarAutomovel.html
@@ -16,6 +16,10 @@
         <input type="text" th:field="*{modelo}" id="modelo" placeholder="modelo">
         <label for="placa">placa</label>
         <input type="text" th:field="*{placa}" id="placa" placeholder="placa">
+        <select name="prorietario">
+            <option th:each="prorietarioOpt : ${T(br.pucminas.aluguelDeCarros.thymeleaf.model.Prorietario).values()}" 
+                th:value="${prorietarioOpt}" th:text="${prorietarioOpt}"></option>
+        </select>
 
 
         <span th:if="${#fields.hasErrors('matricula')}" th:errors="*{matricula}"></span>
