--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarCliente.html
@@ -8,6 +8,10 @@
     <form action="#" th:action="@{/criarCliente}" th:object="${cliente}" method="post">
         <label for="nome">Nome</label>
         <input type="text" th:field="*{nome}" id="nome" placeholder="Nome">
+        <label for="login">Login</label>
+        <input type="text" th:field="*{login}" id="login" placeholder="Login">
+        <label for="senha">Senha</label>
+        <input type="text" th:field="*{senha}" id="senha" placeholder="Senha">
         <label for="id">Id</label>
         <input type="number" th:field="*{id}" id="id" placeholder="id">
         <label for="rg">RG</label>
