--- a/project/code/aluguelDeCarros/src/main/resources/templates/readAutomovel.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readAutomovel.html
@@ -22,7 +22,7 @@
                     <tr th:each="automovel : ${automoveis}">
                         <td th:text="${automovel.id}"></td>
                         <td th:text="${automovel.matricula}"></td>
-                        <td th:text="${automovel.prorietario}"></td>
+                        <td th:text="${automovel.proprietario}"></td>
                         <td><a th:href="@{automovelEdit/{id}(id=${automovel.id})}">Edit</a></td>
                         <td><a th:href="@{automovelDelete/{id}(id=${automovel.id})}">Delete</a></td>
                     </tr>
