--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
@@ -10,7 +10,7 @@
     th:action="@{clienteUpdate/{id}(id=${cliente.id})}" 
     th:object="${cliente}" 
     method="post">
-      <label for="name">Name</label>
+      <label for="nome">Name</label>
       <input type="text" th:field="*{nome}" id="nome" placeholder="Nome">
       <label for="id">Id</label>
       <input type="number" th:field="*{id}" id="id" placeholder="id">
