Disabled "id" field in update forms

--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateAgente.html
@@ -11,9 +11,9 @@
     th:object="${agente}" 
     method="post">
       <label for="cpnj">CPNJ</label>
-      <input type="text" th:field="*{cpnj}" id="cpnj" placeholder="cpnj">
+      <input type="text" th:field="*{cpnj}" id="cpnj" placeholder="cpnj" >
       <label for="id">Id</label>
-      <input type="number" th:field="*{id}" id="id" placeholder="id">
+      <input type="number" th:field="*{id}" id="id" placeholder="id" disabled>
 
 
       <span th:if="${#fields.hasErrors('cpnj')}" th:errors="*{cpnj}"></span>
