--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateAutomovel.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateAutomovel.html
@@ -11,7 +11,7 @@
     th:object="${automovel}" 
     method="post">
       <label for="id">Id</label>
-      <input type="number" th:field="*{id}" id="id" placeholder="id">
+      <input type="number" th:field="*{id}" id="id" placeholder="id" disabled>
       <label for="ano">ano</label>
       <input type="number" th:field="*{ano}" id="ano" placeholder="ano">
       <label for="matricula">matricula</label>
