--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
@@ -13,7 +13,7 @@
       <label for="nome">Name</label>
       <input type="text" th:field="*{nome}" id="nome" placeholder="Nome">
       <label for="id">Id</label>
-      <input type="number" th:field="*{id}" id="id" placeholder="id">
+      <input type="number" th:field="*{id}" id="id" placeholder="id" disabled>
       <label for="rg">RG</label>
       <input type="text" th:field="*{rg}" id="rg" placeholder="rg">
       <label for="cpf">CPF</label>
