--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateUsuario.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateUsuario.html
@@ -14,8 +14,7 @@
   <label for="senha">Senha</label>
   <input type="text" th:field="*{senha}" id="senha" placeholder="Senha">
   <label for="id">Id</label>
-  <input type="number" th:field="*{id}" id="id" placeholder="id">
-
+  <input type="number" th:field="*{id}" id="id" placeholder="id" disabled>
   <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
   <input type="submit" value="Update cliente">
 </form>
