--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
@@ -7,10 +7,14 @@
 <body>
     <form action="#" th:action="@{/criarPedido}" th:object="${pedido}" method="post">
 
-        <label for="id">Id</label>
-        <input type="number" th:field="*{id}" id="id" placeholder="id">
-
         <input type="text" th:field="*{contrato}" id="contrato" placeholder="contrato">
+
+        <select th:field="*{cliente}">
+            <option th:each="cliente : ${clientes}" 
+                    th:value="${cliente.id}" 
+                    th:text="${cliente.name}">
+            </option>
+        </select>
 
         <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
         <input type="submit" value="Add pedido">   
