--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarAgente.html
@@ -27,5 +27,6 @@
         <span th:if="${#fields.hasErrors('cpnj')}" th:errors="*{cpnj}"></span>
         <input type="submit" value="Add agente">   
     </form>
+    <p><a href="/">Home</a></p>
 </body>
 </html>
