--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarCliente.html
@@ -30,5 +30,6 @@
         <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
         <input type="submit" value="Add cliente">   
     </form>
+    <p><a href="/">Home</a></p>
 </body>
 </html>
