--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarUsuario.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarUsuario.html
@@ -17,5 +17,6 @@
         <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
         <input type="submit" value="Add usuario">   
     </form>
+    <p><a href="/">Home</a></p>
 </body>
 </html>
