--- a/project/code/aluguelDeCarros/src/main/resources/templates/readAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readAgente.html
@@ -30,6 +30,7 @@
             </table>
         </div>      
         <p><a href="/criarAgente">Novo agente</a></p>
+        <p><a href="/">Home</a></p>
     </div>
     
 </body>
