--- a/project/code/aluguelDeCarros/src/main/resources/templates/readCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readCliente.html
@@ -40,6 +40,7 @@
             </table>
         </div>      
         <p><a href="/criarCliente">Novo cliente</a></p>
+        <p><a href="/">Home</a></p>
     </div>
     
 </body>
