--- a/project/code/aluguelDeCarros/src/main/resources/templates/readPedido.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readPedido.html
@@ -35,7 +35,7 @@
         </div>
         <p><a href="/criarPedido">Novo pedido</a></p>
     </div>
-
+    <p><a href="/">Home</a></p>
 </body>
 
 </html>
