--- a/project/code/aluguelDeCarros/src/main/resources/templates/readUsuario.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readUsuario.html
@@ -31,6 +31,6 @@
         </div>      
         <p><a href="/criarUsuario">Novo Usuario</a></p>
     </div>
-    
+    <p><a href="/">Home</a></p>
 </body>
 </html>
