--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateAgente.html
@@ -19,5 +19,6 @@
       <span th:if="${#fields.hasErrors('cpnj')}" th:errors="*{cpnj}"></span>
       <input type="submit" value="Update agente">   
   </form>
+  <p><a href="/">Home</a></p>
 </body>
 </html>
