--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarAutomovel.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarAutomovel.html
@@ -24,5 +24,6 @@
         <span th:if="${#fields.hasErrors('matricula')}" th:errors="*{matricula}"></span>
         <input type="submit" value="Add automovel">   
     </form>
+    <p><a href="/">Home</a></p>
 </body>
 </html>
