--- a/project/code/aluguelDeCarros/src/main/resources/templates/readPedidoAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readPedidoAgente.html
@@ -43,7 +43,7 @@
         </div>
         <p><a href="/criarPedido">Novo pedido</a></p>
     </div>
-
+    <p><a href="/">Home</a></p>
 </body>
 
 </html>
