--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateCliente.html
@@ -31,5 +31,6 @@
       <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
       <input type="submit" value="Update cliente">   
   </form>
+  <p><a href="/">Home</a></p>
 </body>
 </html>
