--- a/project/code/aluguelDeCarros/src/main/resources/templates/updateUsuario.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updateUsuario.html
@@ -18,5 +18,6 @@
   <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
   <input type="submit" value="Update cliente">
 </form>
+<p><a href="/">Home</a></p>
 </body>
 </html>
