--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
@@ -9,12 +9,11 @@
 
         <input type="text" th:field="*{contrato}" id="contrato" placeholder="contrato">
 
-        <select th:field="*{cliente}">
-            <option th:each="cliente : ${clientes}" 
-                    th:value="${cliente.id}" 
-                    th:text="${cliente.name}">
-            </option>
-        </select>
+        <input type="text" th:field="*{cliente}" id="cliente" placeholder="id do cliente">
+        
+        <input type="text" th:field="*{agente}" id="agente" placeholder="id do agente (Opcional)">
+        
+        <input type="text" th:field="*{automovel}" id="automovel" placeholder="id do automovel (Opcional)">
 
         <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
         <input type="submit" value="Add pedido">   
