--- a/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/criarPedido.html
@@ -7,14 +7,28 @@
 <body>
     <form action="#" th:action="@{/criarPedido}" th:object="${pedido}" method="post">
 
-        <input type="text" th:field="*{contrato}" id="contrato" placeholder="contrato">
-
         <select th:field="*{cliente}">
             <option th:each="cliente : ${clientes}" 
                     th:value="${cliente.id}" 
-                    th:text="${cliente.name}">
+                    th:text="${cliente.nome}">
             </option>
         </select>
+
+        <select th:field="*{automovel}">
+            <option th:each="automovel : ${automoveis}"
+                    th:value="${automovel.id}"
+                    th:text="${automovel.modelo}">
+            </option>
+        </select>
+
+        <select th:field="*{agente}">
+            <option th:each="agente : ${agentes}"
+                    th:value="${agente.id}"
+                    th:text="${agente.nome}">
+            </option>
+        </select>
+
+        
 
         <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
         <input type="submit" value="Add pedido">   
