--- a/project/code/aluguelDeCarros/src/main/resources/templates/updatePedido.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/updatePedido.html
@@ -42,5 +42,7 @@
     <input type="submit" value="Update pedido">
 </form>
 <p><a href="/">Home</a></p>
+
+<a href="/readPedido">Ver pedidos</a>
 </body>
 </html>
