--- a/project/code/aluguelDeCarros/src/main/resources/templates/readPedidoBanco.html
+++ b/project/code/aluguelDeCarros/src/main/resources/templates/readPedidoBanco.html
@@ -12,18 +12,10 @@
     <h2 th:case="null">Não há pedidos</h2>
     <div th:case="*">
         <h2>Pedidos aprovados</h2>
-        <form action="#" th:action="@{/aprovarPedidos}" method="post">
-<!--            <select th:field="*{pedidos}">-->
-<!--                <option th:each="pedido : ${pedidos}"-->
-<!--                        th:text="${pedido.cliente.nome}"-->
-<!--                th:value="${pedido.cliente.id}">-->
-<!--                </option>-->
-<!--            </select>-->
             <table>
                 <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Contrato</th>
+                    <th>IdContrato</th>
                     <th>Confirmado</th>
                     <th>Ações</th>
                 </tr>
@@ -31,15 +23,16 @@
                 <tbody>
                 <tr th:each="pedido : ${pedidos}">
                     <td th:text="${pedido.id}"></td>
-                    <td th:text="${pedido.contrato}"></td>
                     <td th:text="${pedido.confirmado}"></td>
                     <td>
-                        <a th:href="@{criarContrato/{id}(id=${pedido.id})}">Criar contrato</a>
+                        <form th:action="@{/criarContrato/{id}(id=${pedido.id})}" method="post">
+                            <input type="hidden" th:value="${pedido.id}" name="pedidoId"/>
+                            <input type="submit" value="Criar contrato"/>
+                        </form>
                     </td>
                 </tr>
                 </tbody>
             </table>
-        </form>
     </div>
 </div>
 <p><a href="/">Home</a></p>
